# WebWarden

./: .gitignore  PLAN.md  README.md  package-lock.json  package.json  vitest.config.js
companion/: CMakeLists.txt  com.webwarden.companion.json
companion/include/webwarden/: json_store.h  message_handler.h  uptime.h
companion/src/: main.cpp  message_handler.cpp  uptime.cpp
companion/src/storage/: json_store.cpp
extension/: manifest.json
extension/background/: service-worker.js
extension/blocked/: blocked.css  blocked.html  blocked.js
extension/content/: time-toast.js
extension/lib/: action-icon.js  alarms.js  bedtime.js  block-logic.js  categories.js  constants.js  dev-time-test.js  dnr.js  extension-page-toast.js  friction.js  incognito-guard.js  native-port.js  reset.js  restart-response.js  site-list-editor.js  storage.js  tab-redirect.js  time-engine.js  url-match.js
extension/options/: options.css  options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
extension/shared/: buttons.css  fonts.css  layout.css  time-toast.css  tokens.css
scripts/: build-companion.ps1  generate-icons.js  install-fonts.ps1  install-native-host.ps1  test-companion.ps1
shared/: protocol.json
shared/schemas/: session.schema.json  settings.schema.json
tests/: E2E_CHECKLIST.md
tests/companion/: json_store_test.cpp
tests/extension/: action-icon.test.js  alarms.test.js  bedtime.test.js  block-logic.test.js  categories.test.js  dev-time-test.test.js  developer-mode.test.js  dnr.test.js  friction.test.js  incognito-guard.test.js  popup.test.js  (+8 more)
(+1 files in other folders)
